# bsdiff

./: CMakeLists.txt
include/: bsdiff.h
source/: bsdiff.c  bsdiff_app.c  bspatch.c  bspatch_app.c  decompressor_dummy.c  decompressor_zlib.c  decompressor_zstd.c  patch_packer_maa.c
